--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
-script: bundle install 
-        bundle update
-        rake wiki
+script: - bundle install 
+        - bundle update
+        - rake wiki
