--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ notifications:
     on_success: always
 rvm:
 - 2.4.0
+before_script:
+- chmod=+x ./script.sh
 script: rake wiki
 after_success:
 - ./script.sh
