--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ notifications:
 rvm:
 - 2.4.0
 before_script:
-- chmod=+x ./script.sh
+- chmod +x ./script.sh
 script: rake wiki
 after_success:
 - ./script.sh
