--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 - 2.4.0
 before_script:
 - chmod +x ./script.sh
+- git checkout origin/master
 script: rake wiki
 after_success: 
 - ./script.sh
