--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ rvm:
 bundler_args: --without deployment
 before_script:
 - chmod +x ./script.sh
+- curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -sudo apt-get install -y nodejs
+- npm install lunr-index-build
 script: rake wiki
 after_success: 
+- lunr-index-build -r id -f title:10 -f body lunr.json index.json
 - ./script.sh
 env:
   global:
