--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ rvm:
 bundler_args: --without deployment
 before_script:
 - chmod +x ./script.sh
+- sudo apt-get install python-software-properties
 - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-- sudo apt-get install -y nodejs
+- sudo apt-get install nodejs
 - npm install lunr-index-build
 script: rake wiki
 after_success: 
