--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ rvm:
 bundler_args: --without deployment
 before_script:
 - chmod +x ./script.sh
-- sudo apt-get install python-software-properties
-- curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-- sudo apt-get install nodejs
+- curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - 
+- sudo sh -c "echo deb https://deb.nodesource.com/node_7.x yakkety main \ > /etc/apt/sources.list.d/nodesource.list"
+- sudo apt-get update && sudo apt-get install nodejs
 - npm install lunr-index-build
 script: rake wiki
 after_success: 
