--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
 bundler_args: --without deployment
 before_script:
 - chmod +x ./script.sh
-- curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - 
+- curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | sudo apt-key add - 
 - sudo sh -c "echo deb https://deb.nodesource.com/node_7.x yakkety main \ > /etc/apt/sources.list.d/nodesource.list"
 - sudo apt-get update && sudo apt-get install nodejs
 - npm install lunr-index-build
