--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
 - chmod +x ./script.sh
 - curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | sudo apt-key add - 
 - sudo sh -c "echo deb https://deb.nodesource.com/node_6.x yakkety main \ > /etc/apt/sources.list.d/nodesource.list"
-- sudo apt-get update && sudo apt-get install nodejs
+- sudo apt-get install nodejs
 - npm install lunr-index-build
 script: rake wiki
 after_success: 
