Trying via echo in js

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 script: rake wiki
 after_success: 
 - lunr-index-build -r id -f title:10 -f body lunr.json index.json
+- echo '[{ "id": "1", "title": "Foo", "body": "Bar" }]' | node build-index.js > index.json
 - ./script.sh
 env:
   global:
